fixed bugs of vertical aligning of icons

--- a/src/components/Pages/Technologies/Technologies.css
+++ b/src/components/Pages/Technologies/Technologies.css
@@ -17,7 +17,7 @@ th.th-title {
 }
 
 th.th-actions {
-  margin-right: 1vh;
+  margin-right: 1.3vh !important;
 }
 
 td.td-title {
@@ -25,7 +25,7 @@ td.td-title {
 }
 
 td.td-actions {
-  /* margin-right: 0.5vw !important; */
+  margin-right: -0.1vw !important;
 }
 
 td img {
@@ -33,7 +33,13 @@ td img {
   margin-left: -0.1vw;
 }
 
-
+td, th {
+  padding: 5px 5px;
+  display: table-cell;
+  text-align: left;
+  vertical-align: middle;
+  border-radius: 2px;
+}
 
 table > tbody > tr:last-child {
   border-bottom: none;
